@startuml

class dataSet {
    {field} data
    {field} recordSize
    {field} count
    {method} streamStoredSize
    {method} GetLen
    {method} DefBlock
    {method} PutBlock
    {method} GetBlock
}

class Descriptor {
    {field} fieldNames
    {method} Append
    {method} operator|
    {method} operator=
    {method} GetSize
    {method} Position
    {method} Len
    {method} Offset
    {method} Type
    {method} ToString
    {method} Cast
    {method} operator<<
    {method} operator>>
}

class genericBinaryFileAccessor {
    {field} fileNameStr
}


class posixBinaryFileAccessor {
    {field} fileNameStr
}

class posixPrmBinaryFileAccessor {
    {field} fileNameStr
    {field} fd
}


class FileAccessorInterface {
    {method} Read
    {method} Write
    {method} FileName
}

class payLoadAccessor {
        {field} descriptor
        {field} ptr
        {field} hexFormat

        {method} operator>>
        {method} operator<<
}

class DataStorageAccessor {
        {field} pAccessor
        {field} descriptor
        {field} reverse
        {field} recordsCount
        {method} Get
        {method} Put
}

FileAccessorInterface --> genericBinaryFileAccessor
FileAccessorInterface --> posixBinaryFileAccessor
FileAccessorInterface --> posixPrmBinaryFileAccessor

genericBinaryFileAccessor --* DataStorageAccessor
posixBinaryFileAccessor --* DataStorageAccessor
posixPrmBinaryFileAccessor --* DataStorageAccessor

Descriptor --* DataStorageAccessor

payLoadAccessor --* Descriptor

@enduml